Updates according to suggestions from Kent-Andre.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -449,11 +449,36 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   url = {http://simula.no/research/scientific/publications/Simula.SC.22/downloadPdfFile}
 }
 
+@INPROCEEDINGS{VilelaJanssonEtAl2010,
+  author = {R. Vilela de Abreu and N. Jansson and J. Hoffman},
+  title = {Adaptive computation of aeroacoustic sources for a 4-wheel rudimentary
+	landing gear benchmark problem},
+  booktitle = {Proc. Workshop on Benchmark Problems Airframe Noise Computation (BANC-I)},
+  year = {2010}
+}
+
 @MISC{UFC,
   author = {M. S. Aln{\ae}s and others},
   title = {{UFC}: },
   year = {2009},
   url = {http://fenics.org/ufc}
+}
+
+@ARTICLE{HoffmanJansson2011,
+  author = {Johan Hoffman and Johan Jansson and Rodrigo Vilela de Abreu},
+  title = {Adaptive modeling of turbulent flow with residual based turbulent
+	kinetic energy dissipation},
+  journal = {Comput. Meth. Appl. Mech. Engrg.},
+  year = {in press},
+  owner = {njansson},
+  timestamp = {2011.02.09}
+}
+
+@ARTICLE{HoffmanJanssonEtAl2009,
+  author = {Hoffman, J. and Jansson, J. and St\"ockli, M.},
+  title = {Unified continuum modeling of fluid-structure interaction},
+  journal = {Mathematical Models and Methods in Applied Sciences},
+  year = {2010}
 }
 
 @ARTICLE{AlperinMazdaLichtorEtAl2006,
