--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8726,231 +8726,226 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @Inbook{Bercovici2009,
-title = "Mantle dynamics past, present and future: an introduction and overview",
-author="D. Bercovici",
-booktitle = "Mantle dynamics",
-editor="D. Bercovici",
-year = "2009",
-volume = "7",
-series = "Treatise on geophysics",
-pages = "1-30"}
+  title = {Mantle dynamics past, present and future: an introduction and overview},
+  author={D. Bercovici},
+  booktitle = {Mantle dynamics},
+editor={D. Bercovici},
+year = {2009},
+volume = {7},
+series = {Treatise on geophysics},
+pages = {1-30}}
 
 @Inbook{Ricard2009,
-title = "Physics of mantle convection",
-author="Y. Ricard",
-booktitle = "Mantle dynamics",
-editor="D. Bercovici",
-year = "2009",
-volume = "7",
-series = "Treatise on geophysics",
-pages = "1-30"}
+title = {Physics of mantle convection},
+author={Y. Ricard},
+booktitle = {Mantle dynamics},
+editor={D. Bercovici},
+year = {2009},
+volume = {7},
+series = {Treatise on geophysics},
+pages = {1-30}}
 
 @Inbook{Tackley2009,
-title = "Mantle geochemical geodynamics",
-author="P. Tackley",
-booktitle = "Mantle dynamics",
-editor="D. Bercovici",
-year = "2009",
-volume = "7",
-series = "Treatise on geophysics",
-pages = "1-30"}
+title = {Mantle geochemical geodynamics},
+author={P. Tackley},
+booktitle = {Mantle dynamics},
+editor={D. Bercovici},
+year = {2009},
+volume = {7},
+series = {Treatise on geophysics},
+pages = {1-30}}
 
 @Article{TanGurnis2005,
-title = "Metastable superplumes and mantle compressibility",
-author = "E. Tan and M. Gurnis",
-journal = "Geophys. Res. Lett.",
-volume = "32",
+title = {Metastable superplumes and mantle compressibility},
+author = {E. Tan and M. Gurnis},
+journal = {Geophys. Res. Lett.},
+volume = {32},
 year = 2005,
-pages = "1-4"}
+pages = {1-4}}
 
 @Article{McNamaraZhong2005,
-author="A. K. McNamara and S. Zhong",
-year = "2005",
-title = "Thermochemical structures beneath Africa and the Pacific Ocean",
-journal = "Nature",
-volume = "437",
-pages = "1136-1139"}
+author={A. K. McNamara and S. Zhong},
+year = {2005},
+title = {Thermochemical structures beneath Africa and the Pacific Ocean},
+journal = {Nature},
+volume = {437},
+pages = {1136-1139}}
 
 @Article{McNutt1998,
-author = "M. K. McNutt",
-year = "1998",
-title = "Superswells",
-journal = "Rev. Geophys.",
-volume = "36",
-pages = "211-244"}
+author = {M. K. McNutt},
+year = {1998},
+title = {Superswells},
+journal = {Rev. Geophys.},
+volume = {36},
+pages = {211-244}}
 
 @Article{Torsvik2010
-title = "Diamonds sampled by plumes from the core–mantle boundary",
-author = "T. H. Torsvik and K. Burke and B. Steinberger and S. J. Webb and L. D. Ashwal",
-journal = "Nature",
-volume = "466",
-year = "2010"}
+title = {Diamonds sampled by plumes from the core–mantle boundary},
+author = {T. H. Torsvik and K. Burke and B. Steinberger and S. J. Webb and L. D. Ashwal},
+journal = {Nature},
+volume = {466},
+year = {2010}}
 
 @Article{McNamara2010,
-title = "Tracking deep mantle reservoirs with ultra-low velocity zones",
-author = "A. K. McNamara and Edward J. Garnero and S. Rost",
-journal = "Earth and planetry science letters",
-volume = "299",
-year = "2010",
-pages = "1-9"}
+title = {Tracking deep mantle reservoirs with ultra-low velocity zones},
+author = {A. K. McNamara and Edward J. Garnero and S. Rost},
+journal = {Earth and planetry science letters},
+volume = {299},
+year = {2010},
+pages = {1-9}}
 
 
-@Article{ LenardicKaula1993,
-	title = "A numerical treatment of geodynamic viscous flow problems involving the advection of material interfaces ",
-	author = "A. Lenardic and W.M. Kaula",
-	journal = "J. Geophys. Res.",
-	pages = "8243-8260",
-	volume = "98",
-	number = "B5",
-	year = "1993"
+@Article{LenardicKaula1993,
+	title = {A numerical treatment of geodynamic viscous flow problems involving the advection of material interfaces },
+	author = {A. Lenardic and W.M. Kaula},
+	journal = {J. Geophys. Res.},
+	pages = {8243-8260},
+	volume = {98},
+	number = {B5},
+	year = {1993}
 }
 
-@Article{ HansenYuen1988,
-	title = "Numerical simulation of thermal-chemical instabilities at the core-mantle boundary",
-	author = "U. Hansen and D.A. Yuen ",
-	journal = "Nature",
-	pages = "237--240",
-	volume = "334",
-	year = "1988"
+@Article{HansenYuen1988,
+	title = {Numerical simulation of thermal-chemical instabilities at the core-mantle boundary},
+	author = {U. Hansen and D.A. Yuen },
+	journal = {Nature},
+	pages = {237--240},
+	volume = {334},
+	year = {1988}
 }
 
-@Article{ KekenEtAl1997,
-	title = "A comparison of methods for the modeling of thermochemical convection ",
-	author = "P.E. van Keken and S.D. King and H. Schmeling and others",
-	journal = "J. Geophys. Res.",
-	pages = "22477--22495",
-	volume = "102",
-	number = "B10",
-	year = "1997"
+@Article{KekenEtAl1997,
+	title = {A comparison of methods for the modeling of thermochemical convection },
+	author = {P.E. van Keken and S.D. King and H. Schmeling and others},
+	journal = {J. Geophys. Res.},
+	pages = {22477--22495},
+	volume = {102},
+	number = {B10},
+	year = {1997}
 }
 
-@Article{ BlankenbachBusse1989,
-	title = "A benchmark comparison for mantle convection codes",
-	author = "B. Blankenbach and F. Busse and U. Christensen and others",
-	journal = "Geophys. J. Int.",
-	pages = "23--28",
-	volume = "98",
-	year = "1989"
+@Article{BlankenbachBusse1989,
+	title = {A benchmark comparison for mantle convection codes},
+	author = {B. Blankenbach and F. Busse and U. Christensen and others},
+	journal = {Geophys. J. Int.},
+	pages = {23--28},
+	volume = {98},
+	year = {1989}
 }
 
-@Book{ IsmailZadehTackley2010,
-	title = "Computational methods for geodynamics",
-	author = "A. Ismail-Zadeh and P. Tackley",
-	year = "2010",
-	publisher = "Cambridge University Press"
+@Book{IsmailZadehTackley2010,
+	title = {Computational methods for geodynamics},
+	author = {A. Ismail-Zadeh and P. Tackley},
+	year = {2010},
+	publisher = {Cambridge University Press}
 }
 
-@Book{ Gerya2010,
-	title = "Introduction to numerical geodynamic modelling",
-	author = "T. Gerya",
-	publisher = "Cambridge University Press",
-	year = "2010"
+@Book{Gerya2010,
+	title = {Introduction to numerical geodynamic modelling},
+	author = {T. Gerya},
+	publisher = {Cambridge University Press},
+	year = {2010}
 }
 
-@Book{ ZienkiewiczTaylor2000,
-	title = "The finite element method",
-	author = "O.C. Zienkiewicz and R.L. Taylor",
-	publisher = "Buyyerworth-Heinemann",
-	edition = "5",
-	volume = "3: Fluid dynamics",
-	year = "2000"
+@Book{ZienkiewiczTaylor2000,
+	title = {The finite element method},
+	author = {O.C. Zienkiewicz and R.L. Taylor},
+	publisher = {Buyyerworth-Heinemann},
+	edition = {5},
+	volume = {3: Fluid dynamics},
+	year = {2000}
 }
 
-@Article{ PietroLoForteParolini2006,
-	title = "Mass preserving finite element implementations of the level set method",
-	author = "D.A. di Pietro and S. Lo Forte and N. Parolini",
-	journal = "Applied Numerical Mathematics",
-	pages = "1179--1195",
-	volume = "56",
-	year = "2006"
+@Article{PietroLoForteParolini2006,
+	title = {Mass preserving finite element implementations of the level set method},
+	author = {D.A. di Pietro and S. Lo Forte and N. Parolini},
+	journal = {Applied Numerical Mathematics},
+	pages = {1179--1195},
+	volume = {56},
+	year = {2006}
 }
 
-@Article{ Arnold1982,
-	title = "An interior penalty finite element method with discontinuous elements ",
-	author = "D.N. Arnold",
-	journal = "SIAM J. Numer. Anal.",
-	volume = "19",
-	number = "4",
-	year = "1982"
+@Article{Arnold1982,
+	title = {An interior penalty finite element method with discontinuous elements },
+	author = {D.N. Arnold},
+	journal = {SIAM J. Numer. Anal.},
+	volume = {19},
+	number = {4},
+	year = {1982}
 }
 
-@Article{ KulkarniRovasTortorelli2007,
-	title = "Discontinuous {G}alerkin framework for adaptive solution of parabolic equation",
-	author = "D.V. Kulkarni  and D.V. Rovas  and D.A. Tortorelli",
-	journal = "Int. J. Numer. Meth. Engng",
-	pages = "1--24",
-	volume = "70",
-	year = "2007"
+@Article{KulkarniRovasTortorelli2007,
+	title = {Discontinuous {G}alerkin framework for adaptive solution of parabolic equation},
+	author = {D.V. Kulkarni  and D.V. Rovas  and D.A. Tortorelli},
+	journal = {Int. J. Numer. Meth. Engng},
+	pages = {1--24},
+	volume = {70},
+	year = {2007}
 }
 
-@Article{ BergKekenYuen1993,
-	title = "The effects of a composite non-{N}ewtonian and {N}ewtonian rheology on mantle convection",
-	author = "A.P. van den Berg and P.E. van Keken and D.A. Yuen",
-	journal = "Geophys. J. Int.",
-	pages = "62--78",
-	volume = "115",
-	year = "1993"
+@Article{BergKekenYuen1993,
+	title = {The effects of a composite non-{N}ewtonian and {N}ewtonian rheology on mantle convection},
+	author = {A.P. van den Berg and P.E. van Keken and D.A. Yuen},
+	journal = {Geophys. J. Int.},
+	pages = {62--78},
+	volume = {115},
+	year = {1993}
 }
 
-@Article{ HansenEbel1988,
-	title = "Time-dependent thermal convection - a possible explanation for a multiscale flow in the Earth's mantle",
-	author = "U. Hansen  and A. Ebel",
-	journal = "Geophysical Journal",
-	pages = "181--191",
-	volume = "94",
-	year = "1988"
+@Article{HansenEbel1988,
+	title = {Time-dependent thermal convection - a possible explanation for a multiscale flow in the Earth's mantle},
+	author = {U. Hansen  and A. Ebel},
+	journal = {Geophysical Journal},
+	pages = {181--191},
+	volume = {94},
+	year = {1988}
 }
 
-@article{ Jarvis2007,
-title = "Survival times of subducted slab remnants in numerical models of mantle flow",
-journal = "Earth and Planetary Science Letters",
-volume = "260",
-number = "1-2",
-pages = "23 - 36",
-year = "2007",
-note = "",
-issn = "0012-821X",
-doi = "DOI: 10.1016/j.epsl.2007.05.009",
-author = "Gary T. Jarvis and Julian P. Lowman",
-keywords = "slab remnants",
-keywords = "viscosity stratification",
-keywords = "mantle flow models",
-keywords = "3D mantle flow",
-keywords = "3D numerical models"
+@article{Jarvis2007,
+title = {Survival times of subducted slab remnants in numerical models of mantle flow},
+journal = {Earth and Planetary Science Letters},
+volume = {260},
+number = {1-2},
+pages = {23 - 36},
+year = {2007},
+note = {},
+issn = {0012-821X},
+doi = {DOI: 10.1016/j.epsl.2007.05.009},
+author = {Gary T. Jarvis and Julian P. Lowman},
 }
 
 @article{Burke2008,
-title="Plume Generation Zones at the margins of Large Low Shear Velocity provinces on the core–mantle boundary",
-author="K. Burke and B. Steinberger and T. H. Torsvik and M. A. Smethurst",
-journal = "Earth and Planetary Science Letters",
-year = "2008",
-volume = "265",
-pages = "49-60"
+title={Plume Generation Zones at the margins of Large Low Shear Velocity provinces on the core–mantle boundary},
+author={K. Burke and B. Steinberger and T. H. Torsvik and M. A. Smethurst},
+journal = {Earth and Planetary Science Letters},
+year = {2008},
+volume = {265},
+pages = {49-60}
 }
 
-@article{ vanderMeer2010,
-author="D.G. van der Meer, W. Spakman, D.J.J. van Hinsbergen, M.L. Amaru, T.H. Torsvik",
+@article{vanderMeer2010,
+author={D.G. van der Meer and W. Spakman and D.J.J. van Hinsbergen and M.L. Amaru and T.H. Torsvik},
 year=2010,
-title="Towards absolute plate motions constrained by lower-mantle slab remnants",
-journal="Nature Geoscience",
+title={Towards absolute plate motions constrained by lower-mantle slab remnants},
+journal={Nature Geoscience},
 volume=3,
-pages="36-40"
+pages={36-40}
 }
 
-@Article{ MontagueKelloggManga1998,
-	title = "High Rayleigh number thermo-chemical models of a dense boundary layer in {D''} ",
-	author = "N.L. Montague and H.L. Kellogg and M. Manga",
-	journal = "Geophys. Res. Lett.",
-	pages = "2345--2348",
-	volume = "25",
-	number = "13",
-	year = "1998"
+@Article{MontagueKelloggManga1998,
+	title = {High Rayleigh number thermo-chemical models of a dense boundary layer in {D''} },
+	author = {N.L. Montague and H.L. Kellogg and M. Manga},
+	journal = {Geophys. Res. Lett.},
+	pages = {2345--2348},
+	volume = {25},
+	number = {13},
+	year = {1998}
 }
 
-@Book{ Lin2006,
-	title = "Discontinuous Finite Elements in Fluid Dynamics and Heat Transfer ",
-	series = "Computational Fluid and Solid Mechanics",
-	author = "B. Q. Lin",
-	publisher = "Springer-Verlag London Limited",
-	year = "2006"
+@Book{Lin2006,
+	title = {Discontinuous Finite Elements in Fluid Dynamics and Heat Transfer },
+	series = {Computational Fluid and Solid Mechanics},
+	author = {B. Q. Lin},
+	publisher = {Springer-Verlag London Limited},
+	year = {2006}
 }
